--- a/Module_5_Challenge/style.css
+++ b/Module_5_Challenge/style.css
@@ -9,8 +9,9 @@ textarea {
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
-  padding: 10px;
+  border: 1px solid black;
+  padding: 0px;
+  height: 80px;
 }
 
 .jumbotron {
@@ -19,6 +20,7 @@ textarea {
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  margin-bottom: 0px;
 }
 
 .description {
